--- a/css/copa.css
+++ b/css/copa.css
@@ -53,7 +53,7 @@
     position: absolute;
     line-height: 35px;
     width: 300px;
-    height: 100%;
+    height: 10000px;
     background: rgb(104, 1, 35);
     padding: 20px;
   }
@@ -62,7 +62,7 @@
   nav ul {
     list-style-type: none;
     padding: 0;
-    position: relative;
+    position: sticky;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color:rgb(240, 235, 237);
   }
