--- a/css/copa.css
+++ b/css/copa.css
@@ -53,7 +53,7 @@
     position: absolute;
     line-height: 35px;
     width: 300px;
-    height: 10000px;
+    height: 100%;
     background: rgb(104, 1, 35);
     padding: 20px;
   }
