--- a/css/grupos.css
+++ b/css/grupos.css
@@ -14,6 +14,8 @@
       border-color:  rgb(240, 235, 237);
       border-collapse: collapse;
       text-align: center;
+      width: 800px;
+      height: auto;
 
     }
   
